--- a/oksana.css
+++ b/oksana.css
@@ -14,3 +14,10 @@ body{
     margin-top: -154px;
     color: #fff;
 }
+footer{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    background-color: darkblue;
+    padding: 50px;
+}
