--- a/josephine.css
+++ b/josephine.css
@@ -15,6 +15,13 @@ body{
     margin-top: -154px;
     color: #fff;
 }
+footer{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    padding: 50px;
+}
 
 /* billed str.
 
