--- a/josephine.css
+++ b/josephine.css
@@ -19,7 +19,7 @@ footer{
     color: white;
     display: flex;
     justify-content: space-between;
-    background-color: black;
+    background-color: grey;
     padding: 50px;
 }
 
