--- a/lea.css
+++ b/lea.css
@@ -22,3 +22,11 @@ footer{
     background-color: darkblue;
     padding: 50px;
 }
+footer{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    background-color: grey;
+    padding: 50px;
+}
+
