--- a/oksana.css
+++ b/oksana.css
@@ -18,6 +18,6 @@ footer{
     color: white;
     display: flex;
     justify-content: space-between;
-    background-color: darkblue;
+    background-color: grey;
     padding: 50px;
 }
