--- a/style.css
+++ b/style.css
@@ -53,4 +53,10 @@ main{
     max-width: 100%;
 }
 
-
+footer{
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    background-color: grey;
+    padding: 50px;
+}
