--- a/mikkel.css
+++ b/mikkel.css
@@ -15,10 +15,11 @@ body{
     color: #fff;
 
 }
+
 footer{
     color: white;
     display: flex;
     justify-content: space-between;
-    background-color: darkblue;
+    background-color: grey;
     padding: 50px;
 }
