--- a/mikkel2.css
+++ b/mikkel2.css
@@ -19,6 +19,6 @@ footer{
     color: white;
     display: flex;
     justify-content: space-between;
-    background-color: darkblue;
+    background-color: grey;
     padding: 50px;
 }
