--- a/navbar.css
+++ b/navbar.css
@@ -1,4 +1,4 @@
-body {margin:0;font-family:Arial}
+body {margin:0;font-family:Oswald}
 
 .topnav {
   overflow: hidden;
@@ -101,9 +101,4 @@ body {margin:0;font-family:Arial}
     width: 100%;
     text-align: left;
   }
-}
-
-.text{
-    text-align: center;
-    margin-top: 20px;
 }
