--- a/style1.css
+++ b/style1.css
@@ -16,7 +16,7 @@ body{
 
 }
 
-body {margin:0;font-family:Arial}
+body {margin:0;font-family:Oswald}
 
 .topnav {
   overflow: hidden;
@@ -121,9 +121,69 @@ body {margin:0;font-family:Arial}
   }
 }
 
+body {margin:0;height:1080px;}
+
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.Instagram{
+  background: #125688;
+  color: white;
+}
+
+.twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
+
+.linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.youtube {
+  background: #bb0000;
+  color: white;
+}
+
 .text{
     text-align: center;
     margin-top: 20px;
+    font-family: Oswald;
+}
+
+.video{
+  margin-top: 35px;
+  margin-left: 50vw;
+  transform: translate(-80%);
 }
 
 *{
@@ -160,4 +220,34 @@ main{
     max-width: 100%;
 }
 
+footer{
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 50px;
 
+}
+
+address ul,address h4 {
+  display: block;
+  font-family: Oswald;
+  font-size: 1.2rem;
+  columns: white;
+  font-style: normal;
+  font-weight: 400;
+}
+address h4{
+  font-size: 2rem;
+
+}
+address ul{
+  padding-left: 1.2rem;
+}
+
+.main-nav-2{
+  list-style-type: none
+}
+.main-nav-2 li a:hover{
+  color: black;
+}
